--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,117 @@
   font-family: sans-serif;
   text-align: center;
 }
+root {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+h5 {
+  margin-block-start: 0.1rem;
+}
+
+form,
+.formsContainer {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+input,
+select {
+  -webkit-order: 0;
+  -ms-flex-order: 0;
+  order: 0;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  align-self: auto;
+  width: 300px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  font-weight: 700;
+  min-width: 12rem;
+  max-width: 12rem;
+  width: 12rem;
+  height: 2rem;
+  border-radius: 5px;
+  padding: 0 0.5rem;
+  border: 0.1rem solid #00000057;
+  margin-bottom: 0.5rem;
+}
+
+.button:disabled {
+  background-color: #d6f3ff;
+  color: rgba(0, 0, 0, 0.192);
+}
+.button:disabled:hover {
+  background-color: #d6f3ff;
+  color: rgba(0, 0, 0, 0.192);
+}
+.button {
+  background-color: #aee7ff;
+  color: #000;
+}
+.button:hover {
+  background-color: #7ad7ff;
+  color: #000;
+}
+
+.logoContainer {
+  margin-bottom: 8rem;
+  max-width: 5rem;
+}
+.logoContainerLogin {
+  margin-top: 10rem;
+}
+
+.logo {
+  border-radius: 50%;
+  font-weight: 700;
+  color: #fff;
+  background-color: #157811;
+  padding: 1rem;
+  width: 1rem;
+  height: 1rem;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.logoLogin {
+  border-radius: 50%;
+  font-size: 5rem;
+  font-weight: 700;
+  color: #fff;
+  background-color: #157811;
+  padding: 2rem;
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+}
+
+.logoName {
+  font-size: 1rem;
+  margin: 0.25rem 0 0.5rem;
+}
+
+.logoNameLongin {
+  margin: 0.5rem 0 1rem;
+}
